Update/Formulario PaqueteLote y CamionLote

--- a/WindowsFormsApp1/Forms/Lot/PackageLot.resx
+++ b/WindowsFormsApp1/Forms/Lot/PackageLot.resx
@@ -239,10 +239,7 @@
         lPVZDGV9FkNZl43wG4+bqQfXxgDhAAAAAElFTkSuQmCC
 </value>
   </data>
-  <metadata name="id_interno_paquete.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="id_lote.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="id_externo_paquete.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="id_usuario.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
